--- a/values.yaml
+++ b/values.yaml
@@ -626,15 +626,15 @@ podTemplate: ~
 dags:
   persistence:
     # Enable persistent volume for storing dags
-    enabled: false
+    enabled: true
     # Volume size for dags
     size: 1Gi
     # If using a custom storageClass, pass name here
-    storageClassName:
+    storageClassName: azurefile
     # access mode of the persistent volume
     accessMode: ReadWriteMany
     ## the name of an existing PVC to use
-    existingClaim: ~
+    existingClaim: airflow-dag-pvc
   gitSync:
     enabled: false
     # git repo clone url
